# PLODD

./: .travis.yaml  .travis.yml  CMakeLists.txt  ReadMe.md  TODO.md
benchmarking/: CMakeLists.txt  ostream_logger_bench.cpp
docs/: Doxyfile
include/PLODD/: PLODD_version.h  base.h  both.h  collection.h  console_logger.h  file_logger.h  flexy_logger.h  get_time.h  get_time.hpp  multi_file_logger.h  ostream_logger.h  single_file_logger.h  stream_logger.h  uf_ostream_logger.h  version.h
include/PLODD/basic/: base.h  both.h  collection.h  console_logger.h  file_logger.h  multi_file_logger.h  ostream_logger.h  single_file_logger.h  time.hpp  uf_ostream_logger.h  version.h
include/PLODD/fmt/: README.md
include/PLODD/ts/: base.h  ostream_logger.h  time.hpp
include/fmt/: README.md
legacy/: console_logger.cpp.txt
src/: base.cpp  both.cpp  collection.cpp  console_logger.cpp  example.cpp  file_logger.cpp  flexy_logger.cpp  multi_file_logger.cpp  ostream_logger.cpp  stream_logger.cpp
src/basic/: base.cpp  both.cpp  collection.cpp  console_logger.cpp  file_logger.cpp  flexy_logger.cpp  multi_file_logger.cpp  ostream_logger.cpp  single_file_logger.cpp  uf_ostream_logger.cpp
src/ts/: ostream_logger.cpp
tests/: CMakeLists.txt
tests/include/stringy/: stringy.hpp
tests/src/: base_test.cpp  catch_main.cpp  main.cpp  ostream_logger_test.cpp  uf_ostream_logger_test.cpp
tests/src/basic/: base_test.cpp  ostream_logger_test.cpp  uf_ostream_logger_test.cpp
tests/src/ts/: base_test.cpp
